Added Bar Stool, Updated M_Metal_Shiny

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,4 @@ am-i-tape.slnx
 .DS_Store
 /.idea
 ProjectSettings/Packages/com.unity.probuilder/Settings.json
+ProjectSettings/Packages/com.unity.probuilder/Settings.json
