Updated paint bucket

--- a/.gitignore
+++ b/.gitignore
@@ -103,3 +103,4 @@ am-i-tape.slnx
 /.idea
 ProjectSettings/Packages/com.unity.probuilder/Settings.json
 ProjectSettings/Packages/com.unity.probuilder/Settings.json
+ProjectSettings/Packages/com.unity.probuilder/Settings.json
